# lonesha256

./: Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: release.yml  test.yml
examples/: README.md  benchmark.rs  file_hash.rs  hex_output.rs  sample.rs  streaming.rs
src/: lib.rs  wrapper.c
tests/: integration_test.rs
